--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   page_animation_transition: ^0.0.9
   flutter_secure_storage: ^8.0.0
   pie_chart: ^5.3.2
+  awesome_dialog: ^2.2.1
+  bson: ^4.0.0
+  path_provider: ^2.0.15
+
 
 dev_dependencies:
   flutter_test:
